--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mrm",
   "version": "0.1.0",
-  /*"homepage": "https://ajmalshaa.github.io/MRM",*/
+  
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -23,9 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-    "start": "react-scripts start --host 192.168.1.9",
+   
+    "start": "react-scripts start" ,
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
